Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Mirror of svn://svn.code.sf.net/p/open-cobol/code
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
